Enhance GUI Parameters names

--- a/particle_life.html
+++ b/particle_life.html
@@ -90,20 +90,20 @@
             configFolder.add(settings, 'Reset')
             configFolder.add(settings, 'Random Rules')
             configFolder.add(settings, 'Symmetric Rules')
-            configFolder.add(settings, 'seed').listen()
-            configFolder.add(settings, 'fps').listen().disable()
-            configFolder.add(settings.atoms, 'count', 1, 1000, 1).listen().onFinishChange(v => {
+            configFolder.add(settings, 'seed').name('Seed').listen()
+            configFolder.add(settings, 'fps').name('FPS - (Live)').listen().disable()
+            configFolder.add(settings.atoms, 'count', 1, 1000, 1).name('Atoms per-color').listen().onFinishChange(v => {
                 randomAtoms(v, true)
             })
-            configFolder.add(settings, 'time_scale', 0.1, 5, 0.01).listen()
-            configFolder.add(settings, 'cutOff', 1, 10000, 50).listen()
-            configFolder.add(settings, 'viscosity', 0.1, 2, 0.1).listen()
-            configFolder.add(settings, 'pulseDuration', 1, 100, 1).listen()
+            configFolder.add(settings, 'time_scale', 0.1, 5, 0.01).name('Time Scale').listen()
+            configFolder.add(settings, 'cutOff', 1, 20000, 50).name('Max Distance').listen()
+            configFolder.add(settings, 'viscosity', 0.1, 2, 0.1).name('Viscosity').listen()
+            configFolder.add(settings, 'pulseDuration', 1, 100, 1).name('Click Pulse Duration').listen()
             // Drawings
             const drawingsFolder = settings.gui.addFolder('Drawings')
-            drawingsFolder.add(settings.atoms, 'radius', 1, 10, 0.5).listen()
-            drawingsFolder.add(settings.drawings, 'circle').listen()
-            drawingsFolder.add(settings.drawings, 'lines').listen()
+            drawingsFolder.add(settings.atoms, 'radius', 1, 10, 0.5).name('Radius').listen()
+            drawingsFolder.add(settings.drawings, 'circle').name('Circle shape').listen()
+            drawingsFolder.add(settings.drawings, 'lines').name('Draw Lines').listen()
             drawingsFolder.add(settings.drawings.background, 'active').name('Background Color').listen()
             drawingsFolder.addColor(settings.drawings.background, 'color').name('Background Color').listen()
             // Colors
