--- a/particle_life.html
+++ b/particle_life.html
@@ -56,9 +56,8 @@
                 randomAtoms(settings.atoms.count, true)
             },
             randomRules: () => {
-                randomRules()
-                randomAtoms(settings.atoms.count, true)
-                updateGUIDisplay()
+                settings.seed = local_seed   // last used seed is the new starting seed
+                startRandom()
             },
             symmetricRules: () => {
                 symmetricRules()
@@ -97,7 +96,9 @@
             configFolder.add(settings, 'reset').name('Reset')
             configFolder.add(settings, 'randomRules').name('Random Rules')
             configFolder.add(settings, 'symmetricRules').name('Symmetric Rules')
-            configFolder.add(settings, 'seed').name('Seed').listen()
+            configFolder.add(settings, 'seed').name('Seed').listen().onFinishChange(v => {
+                startRandom();
+            })
             configFolder.add(settings, 'fps').name('FPS - (Live)').listen().disable()
             configFolder.add(settings.atoms, 'count', 1, 1000, 1).name('Atoms per-color').listen().onFinishChange(v => {
                 randomAtoms(v, true)
@@ -128,8 +129,9 @@
 
 
         // Seedable 'decent' random generator
+        var local_seed = settings.seed;
         function mulberry32() {
-            var t = settings.seed += 0x6D2B79F5;
+            var t = local_seed += 0x6D2B79F5;
             t = Math.imul(t ^ t >>> 15, t | 1);
             t ^= t + Math.imul(t ^ t >>> 7, t | 61);
             return ((t ^ t >>> 14) >>> 0) / 4294967296.;
@@ -148,8 +150,9 @@
 
         function randomRules() {
             if (!isFinite(settings.seed)) settings.seed = 0xcafecafe;
-            console.log("Seed=" + settings.seed);
             window.location.hash = "#" + settings.seed;
+            local_seed = settings.seed;
+            console.log("Seed=" + local_seed);
             for (var i of settings.colors) {
                 settings.rules[i] = {};
                 for (var j of settings.colors) {
@@ -218,8 +221,11 @@
             }
         }
 
-
-
+        function startRandom() {
+            randomRules()
+            randomAtoms(settings.atoms.count, true)
+            updateGUIDisplay()
+        }
 
         // Run Application
         loadSeedFromUrl()
